# kaldi

./: CMakeLists.txt
cmake/: Utils.cmake  gen_cmake_skeleton.py
src/tfrnnlm/: CMakeLists.txt
